--- a/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
@@ -162,6 +162,29 @@
                             </div>
                         </div>
 
+                        <!-- Internal Branch -->
+                        <div class="row kt-padding-t-15">
+                            <div class="col-4 form-label">
+                                <mat-label class="mandatory">Internal Branch</mat-label>
+                            </div>
+
+                            <div class="col-8">
+                                <select class="form-control" formControlName="internalBranchId"
+                                    [class.isError]="controls.internalBranchId.touched && controls.internalBranchId.invalid">
+                                    <option [disabled] [selected] value=""> Select State</option>
+                                    <option *ngFor="let branch of branches" [value]="branch.id">
+                                        {{branch.name}}
+                                    </option>
+                                </select>
+                                <mat-error
+                                    *ngIf="controls.internalBranchId.touched && controls.internalBranchId.errors?.required">
+                                    Required field
+                                </mat-error>
+
+                                <!-- </mat-form-field> -->
+                            </div>
+                        </div>
+
 
                         <!-- State -->
                         <div class="row kt-padding-t-15">
@@ -205,6 +228,21 @@
                                 </select>
                                 <mat-error *ngIf="controls.cityId.touched && controls.cityId.errors?.required">
                                     Required field</mat-error>
+                                <!-- </mat-form-field> -->
+                            </div>
+                        </div>
+
+                        <!-- Date & Time -->
+                        <div class="row kt-padding-t-15">
+                            <div class="col-4 form-label">
+                                <mat-label>Pin Code</mat-label>
+                            </div>
+
+                            <div class="col-8">
+                                <!-- <mat-form-field appearance="outline" class="w-100"> -->
+                                <input class="form-control" formControlName="pinCode" numbersOnly maxlength="6"
+                                    placeholder="000 000">
+                                <mat-error *ngIf="controls.dateTime.errors?.required ">Required field</mat-error>
                                 <!-- </mat-form-field> -->
                             </div>
                         </div>
